<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Persistent_Typ" Id="{38fb82c9-00a9-4082-a65b-c4b7f1d46d66}">
    <Declaration><![CDATA[TYPE Persistent_Typ :
STRUCT
	LifeTimerCounter:UDINT;
	//Timers
	TimeColdCutPressDown: DINT := 3000;
	TimeGripperStartPisition: DINT := 6000;
	TimeGripperMoveDelay: DINT := 3500;
	TimeGripperOpen: DINT := 3000;
	TimeGripperRetract: DINT := 3000;
	TimeHotWeldPressDown: DINT := 3000;
	TimerHotWeldingOn: DINT := 3000;
	TimerHotWeldingOff: DINT := 3000;
	TimerPressUp: DINT := 3000;
	
	TimerMotorOn: DINT := 3000;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>