<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="Consts" Id="{49a01286-8f99-40c5-ba6b-da4865c8fdf0}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
CONST_ZERO :DINT :=0;	





END_VAR

VAR_GLOBAL CONSTANT

// States		
	MACHINE_RUN_INIT:						INT:=0;
	MACHINE_GRIPPER_START_POSITION:			INT:=11;
	MACHINE_GRIPPER_EXCTRACT:				INT:=12;
	MACHINE_GRIPPER_OPEN:					INT:=13;
	MACHINE_GRIPPER_CLOSE:					INT:=14;
	MACHINE_GRIPPER_RETRACT:				INT:=15;
	
	MACHINE_GRIPPER_END_POSITION:			INT:=17;
	MACHINE_ENABLE_TENSION:					INT:=18;	
	//MACHINE_FRIPPER_WAIT_POSITION:			INT:=19;	
	
	MACHINE_WAIT_DANCER_FULL:				INT:=21;
	
	
	MACHINE_COLD_CUT_VALVE_OPEN:				INT:=10;
	MACHINE_WELD_VALVE_OPEN:					INT:=20;	
	MACHINE_HEATER_ON:							INT:=30;	
	MACHINE_HEATER_OFF:							INT:=40;
	MACHINE_VALVE_CLOSE:						INT:=50;	
	
	MACHINE_OUT_GRIPPER_START_POSITION:			INT:=60;
	MACHINE_OUT_GRIPPER_CLAMP:					INT:=61;
	MACHINE_OUT_GRIPPER_END_POSITION:			INT:=62;	

	MACHINE_DONE:							INT:=100;	



END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>